--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.1.40",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
